<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/babypowder"
    tools:context=".Report">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_gravity="center"
            android:gravity="start"
            android:layout_width="match_parent"
            android:background="#247B7B"
            android:layout_height="?actionBarSize">

            <ImageView
                android:id="@+id/repback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/back"
                android:padding="20dp"
                app:srcCompat="@drawable/back"
                app:tint="@android:color/white" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="15dp"
                android:layout_marginStart="257dp"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="17dp"
                android:layout_toEndOf="@+id/repback"
                android:fontFamily="@font/dmsans_light"
                android:gravity="center"
                android:text="@string/report_bugs"
                android:textColor="@color/white"
                android:textSize="24sp" />


        </RelativeLayout>
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:lottie_rawRes="@raw/buganimation"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"/>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:background="@android:drawable/editbox_background"
                android:hint="@string/your_name"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@android:color/black"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@android:drawable/editbox_background"
                android:hint="@string/your_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@android:color/black"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/etMessage"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:autofillHints="username"
                android:inputType="text"
                android:background="@android:drawable/editbox_background"
                android:gravity="top"
                android:hint="@string/your_problem"
                android:padding="10dp"
                android:textColor="@android:color/black"
                tools:ignore="VisualLintTextFieldSize" />
            <LinearLayout
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:orientation="horizontal" >
                <TextView
                    android:fontFamily="@font/dmsans_medium"
                    android:id="@+id/imageNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_screensort"
                    android:layout_marginStart="32dp"
                    android:textSize="18sp"
                    android:textColor="#333" />

                <!-- ImageButton to trigger image selection -->
                <ImageButton
                    android:layout_gravity="end"
                    android:id="@+id/imageUploadButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/icons8upload100"
                    android:background="@android:color/transparent"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"

                    android:contentDescription="@string/upload_image"/>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSend"
                android:background="@drawable/bugs_button_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:text="@string/send_message"
                android:textColor="@android:color/white"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>

    </LinearLayout>



</androidx.drawerlayout.widget.DrawerLayout>