<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#81DFE1E1"
    tools:context=".Signin">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/loginbackpreview">




    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/dmsansbold"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/dmsans_regular"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"

                android:background="@drawable/white_cornor_background"
                tools:ignore="UselessParent">


                <TextView

                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/dmsans_regular"

                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:text="@string/name" />


                <EditText
                    android:id="@+id/signup_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/edittext_green"
                    android:ems="10"
                    android:hint="@string/enter_name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingStart="16dp"
                    android:textColor="@color/babypowder"
                    android:textColorHint="#ffffff"
                    android:textSize="16sp"

                    tools:ignore="RtlSymmetry,TextContrastCheck,VisualLintTextFieldSize" />
                <TextView

                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/dmsans_regular"

                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/signup_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/edittext_green"
                    android:ems="10"
                    android:hint="@string/enter_your_email"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingStart="16dp"
                    android:textColor="@color/babypowder"
                    android:textColorHint="#ffffff"
                    android:textSize="16sp"

                    tools:ignore="RtlSymmetry,TextFields,TextContrastCheck,VisualLintTextFieldSize" />
                <TextView

                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/dmsans_regular"

                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/signup_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/edittext_green"
                    android:ems="10"
                    android:hint="@string/enter_your_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:paddingStart="16dp"
                    android:textColor="@color/babypowder"
                    android:textColorHint="#ffffff"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry,TextContrastCheck,VisualLintTextFieldSize" />

                <TextView

                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/dmsans_regular"

                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:text="@string/repassword" />

                <EditText
                    android:id="@+id/signup_repassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/edittext_green"
                    android:ems="10"
                    android:hint="@string/reenter_your_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:paddingStart="16dp"
                    android:textColor="@color/babypowder"
                    android:textColorHint="#ffffff"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry,TextContrastCheck,VisualLintTextFieldSize" />

                <!--                <androidx.appcompat.widget.AppCompatButton-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:id="@+id/signup_btn"-->
<!--                    style="@android:style/Widget.Button"-->
<!--                    android:layout_marginStart="32dp"-->
<!--                    android:layout_marginEnd="32dp"-->
<!--                    android:textColor="@color/white"-->
<!--                    android:textSize="20sp"-->
<!--                    android:layout_marginBottom="16dp"-->
<!--                    android:layout_marginTop="16dp"-->
<!--                    android:background="@drawable/login_background"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="SignUp"/>-->
                <RelativeLayout
                    android:id="@+id/sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/green_button_background_ripple"
                    android:clickable="true"
                    android:gravity="center"
                    android:focusable="true">
                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/sign_up_text"
                        android:text="@string/sign_up"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/robot1"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:layout_height="wrap_content"/>
                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/signup_animation"
                        android:layout_width="50dp"
                        android:layout_centerInParent="true"
                        android:layout_height="50dp"
                        android:visibility="gone"
                        app:lottie_rawRes="@raw/loadinganimation"
                        app:lottie_loop="true"
                        app:lottie_autoPlay="false"/>

                </RelativeLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textAlignment="center"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/signuplogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:textAlignment="center"
                    android:textColor="@color/verdigris"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="32dp"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>